# pginbox

./: .env.template  .gitignore  CLAUDE.md  DESIGN.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.mailbox-ingest  Dockerfile.pg_textsearch  Makefile  README.md  charts.py  docker-compose.prod.yml  docker-compose.yml  ingest_current_month.sh  lists.tracked  locustfile.py  main.py  package.json  playwright.config.ts  pyproject.toml  test_parse.py  tsconfig.json
.github/workflows/: pr-checks.yml
db/: schema.sql
db/migrations/: 20260301000001_initial_schema.sql  20260301000002_people.sql  20260301000003_attachments.sql  20260301000004_sent_at_approx.sql  20260312000005_analytics_materialized_views.sql  20260312000006_threads_subject_trgm.sql  20260312000007_thread_message_pagination_idx.sql  20260314000008_attachments_part_index_uniqueness.sql  20260315000009_auth_tables.sql  20260315000010_users_updated_at.sql  20260317000011_analytics_messages_last_24h.sql  (+16 more)
docker/: Caddyfile  nginx-frontend.conf
docs/: AUTH.md  DARK_MODE_PLAN.md  DEPLOY.md  FOLLOWED_THREADS.md  FRONTEND_DESIGN.md  INGESTION_LIVE_TAIL.md  MY_THREADS.md  PEOPLE.md  SEARCH.md  SEMANTIC_CHUNKING.md  SEMANTIC_CHUNKING_V2.md  SEMANTIC_SEARCH_UX.md  SHAREABLE_URLS.md  TODO.md  frontend-mvp-checklist.md
shared/: api.ts
test/: api.test.ts  attachments.service.test.ts  auth-core.test.ts  auth-maintenance.test.ts  auth-routes.test.ts  auth.test.ts  config.test.ts  email.test.ts  logging.test.ts  serialize-auth.test.ts  test-db.ts  test_ingestion_threading.py  threads-route-date-parsing.test.ts
(+163 files in other folders)
