[project]
dependencies = [
  "numpy>=2.4.2",
  "pandas>=3.0.1",
  "psycopg2-binary>=2.9.11",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
]
description = "Download, parse, and store PostgreSQL mailing list mbox archives into Postgres"
name = "pginbox"
requires-python = ">=3.12"
version = "0.1.0"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
